💪 Fixed Bg Shifting.....really

--- a/src/global.css
+++ b/src/global.css
@@ -17,28 +17,24 @@
 
 /* SHELL ---------------------------------------- */
 
-html,
 body {
-  min-height: 100vh;
-}
-html {
   background-color: #1c1c1c;
-  background: url("/background.jpeg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  position: absolute;
-}
-body {
+
   color: white;
   padding: 0;
   margin: 0;
   /* padding: var(--max-padding); */
 }
 main {
-  padding: 1rem;
+  background-color: #1c1c1c;
+  background: url("/background.jpeg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: var(--max-padding);
 }
+
 .logo {
   font-size: 3rem;
   margin: 0;
